--- a/css/style.css
+++ b/css/style.css
@@ -39,16 +39,43 @@
   background-color: rgb(255,162,63);
   border: 5px solid white;
   border-radius: 25px;
-  opacity: 0.5;
-  display: flex;
-  justify-content: center;
+  opacity: 0.8;
+  padding: 15px ;
+  margin-bottom: 325px;
+  margin-right: 75px;
+  margin-left: 75px;
+}
+
+#recipeInst{
+  color: white;
+  background-color: rgb(255,162,63);
+  border: 5px solid white;
+  border-radius: 25px;
+  padding: 25px ;
   margin-bottom: 350px;
   margin-right: 75px;
   margin-left: 75px;
-  
-
 }
 
+#start{
+  font-family: 'Press Start 2P', cursive;
+  color: white;
+  font-size: 50px;
+  background-color: rgb(255,162,63);
+  border: 5px solid white;
+  border-radius: 25px;
+  padding: 20px;
+}
+
+.start-game-button{
+  font-family: 'Press Start 2P', cursive;
+  color: white;
+  font-size: 50px;
+  background-color: rgb(255,162,63);
+  border: 5px solid white;
+  border-radius: 25px;
+  padding: 20px;
+}
 
 #lose-page {
   display: none;
